--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# macOS system files
+.DS_Store
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Python bytecode
+__pycache__/
+*.pyc
+
+# Environment files
+.env
+
+# VS Code settings
+.vscode/
 .DS_Store
 .ipynb_checkpoints/
 __pycache__/
